# openbmc-guide-tutorial

./: .gitignore  CONTRIBUTING.md  Gemfile  README.md  _config.yml
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
_sass/custom/: custom.scss
_templates/: guide-template.md
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: contributing.md  index.md  learning-paths.md
docs/01-getting-started/: 01-introduction.md  02-environment-setup.md  03-first-build.md  04-development-workflow.md  05-qemu-build.md  06-devtool-workflow-guide.md  07-gerrit-contribution-guide.md  index.md
docs/02-architecture/: 01-openbmc-overview.md  02-dbus-guide.md  03-state-manager-guide.md  04-custom-dbus-services-guide.md  05-systemd-boot-ordering-guide.md  index.md
docs/03-core-services/: 01-dbus-sensors-guide.md  02-hwmon-sensors-guide.md  03-entity-manager-guide.md  04-fan-control-guide.md  05-power-management-guide.md  06-user-manager-guide.md  07-network-guide.md  08-led-manager-guide.md  09-certificate-manager-guide.md  10-time-manager-guide.md  11-inventory-manager-guide.md  12-watchdog-guide.md  13-buttons-guide.md  14-gpio-management-guide.md  15-peci-thermal-monitoring-guide.md  16-i2c-device-integration-guide.md  17-psu-pmbus-management-guide.md  18-ldap-integration-guide.md  19-pid-thermal-tuning-guide.md  index.md
docs/04-interfaces/: 01-ipmi-guide.md  02-redfish-guide.md  03-webui-guide.md  04-kvm-guide.md  05-virtual-media-guide.md  06-console-guide.md  07-ssh-security-guide.md  08-redfish-events-telemetry-guide.md  09-redfish-oem-extensions-guide.md  index.md
docs/05-advanced/: 01-mctp-pldm-guide.md  02-spdm-guide.md  03-firmware-update-guide.md  04-intel-asd-acd-guide.md  05-amd-ihdt-guide.md  06-logging-guide.md  07-sdr-guide.md  08-linux-debug-tools-guide.md  09-espi-guide.md  10-unit-testing-guide.md  11-robot-framework-guide.md  12-linux-kernel-driver-development-guide.md  12-linux-kernel-patching-guide.md  13-secure-boot-signing-guide.md  14-multi-host-support-guide.md  15-performance-optimization-guide.md  16-bios-firmware-management-guide.md  17-debug-dump-collection-guide.md  18-post-code-monitoring-guide.md  19-pldm-platform-monitoring-guide.md  20-pldm-firmware-update-guide.md  21-dice-security-guide.md  index.md
docs/06-porting/: 01-porting-reference.md  02-machine-layer.md  03-device-tree.md  04-uboot.md  05-verification.md  06-arm-platform-guide.md  07-entity-manager-advanced.md  08-flash-layout-optimization-guide.md  09-ast2700-enablement-guide.md  index.md
docs/07-appendix/: 01-jenkins-ci-infrastructure.md  02-ami-onetree-vs-openbmc.md  03-yocto-bitbake-optimization.md  index.md
docs/examples/bios-config/: README.md  bios-settings.json  read-bios-settings.sh  update-bios-settings.sh
docs/examples/custom-dbus-service/: README.md  example-greeting.bb  example-greeting.service  main.cpp  meson.build
docs/examples/custom-dbus-service/xyz/openbmc_project/Example/: Greeting.interface.yaml
docs/examples/dbus/: README.md  build.sh  entrypoint.sh  meson.build  run.sh
docs/examples/dbus/server/: dbus_server.cpp
docs/examples/debug/: README.md  asan-local.conf
docs/examples/debug-dump/: README.md  collect-dump.sh  custom-dreport-plugin.sh  list-dumps.sh
docs/examples/entity-manager/: README.md  fru-eeprom.json  power-regulators.json
docs/examples/error-injection/: README.md  einj-inject-error.sh  peci-inject-mca.sh  ras-validation-workflow.sh
docs/examples/fan-control/: README.md  entity-manager-fan.json  stepwise-config.json  zone-config.json
docs/examples/firmware-update/: README.md  version-check.sh
docs/examples/flash-layout/: README.md  analyze-image-size.sh  flash-layout-32mb.txt  flash-layout-64mb-ubi.txt  image-size-reduction.conf
docs/examples/gpio-monitor/: README.md  multi-gpio-monitor.json  obmc-chassis-buttons-power-press.target  presence-monitor.json
docs/examples/i2c-tools/: README.md  i2c-device-overlay.dts  read-eeprom.sh  scan-all-buses.sh
docs/examples/ipmi/: README.md  myoem-ipmi.bb
docs/examples/ldap/: README.md  configure-active-directory.sh  configure-openldap.sh  ldap-role-mapping.json  test-ldap-auth.sh
docs/examples/led-manager/: README.md  led-groups.json
docs/examples/logging/: README.md  custom-error.yaml  query-logs.sh
docs/examples/mctp-pldm/: README.md  mctp_health_check.sh  pldm_bios.sh  pldm_discovery.sh  pldm_fwupdate.sh  pldm_pdr_dump.sh  pldm_sensors.sh
docs/examples/multi-host/: README.md  entity-manager-4host.json  (+1 more)
docs/examples/sensors/: Dockerfile  README.md  build.sh  entrypoint.sh  meson.build  run.sh  sensor_reader.cpp
docs/examples/sensors/virtual-sensor/: virtual_sensor.cpp
docs/examples/testing/: CMakeLists.txt  Dockerfile  README.md  build.sh  entrypoint.sh  meson.build  run.sh
examples/dbus/: README.md
examples/debug/: README.md  kernel-debug.cfg  tsan.supp  valgrind.supp
examples/devcontainer/: Dockerfile  devcontainer.json
examples/entity-manager/: README.md  adc-sensors.json  baseboard.json  chassis-fans.json  fans.json  motherboard-sensors.json  psu.json  temperature-sensors.json
examples/fan-control/: README.md  multi-zone-config.json
examples/firmware-update/: README.md  firmware-update.sh
examples/ipmi/: CMakeLists.txt  README.md  meson.build  oem_handler.cpp  oem_handler.hpp
examples/led-manager/: identify-led.sh  led-config.yaml
examples/logging/: README.md  create-event.sh
examples/network/: README.md  network-config.sh
examples/porting/: README.md
examples/power/: README.md  power-config.json  power-sequencer.service  psu-entity-manager.json  regulators-config.json
examples/redfish/: oem-schema.json  oem_resource.hpp  test_oem_resource.sh
examples/robot/: hello_openbmc.robot  redfish_sensors.robot  ssh_commands.robot
examples/sensors/: README.md
examples/testing/: Makefile  README.md  sensor_test.cpp
examples/user-manager/: README.md  ldap-config.json
examples/watchdog/: README.md  watchdog-config.json  watchdog-test.sh
scripts/: run-qemu.sh  setup-fedora.sh  setup-ubuntu.sh
(+61 files in other folders)
